# clonal-algorithm-with-immune-memory

./: README.md  __main__.py  hello.py  pyproject.toml
lib/: benchmark.py
resources/datasets/: clonal-raw-data.csv  clonal-with-memory-data.csv
resources/results-datasets/: prueba-anova-antigenic-feature-count-tiempo-busqueda.csv  prueba-anova-antigenic-feature-count-valor-optimo.csv  prueba-anova-somatic-hypermutation-rate-valor-optimo.csv  resultados-tiempo-de-busqueda.csv  resultados-valor-optimo.csv
