[project]
name = "clonal-algorithm-with-immune-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo[recommended]>=0.10.9",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scipy>=1.15.0",
]
